Fix: Katex overflowing content will scroll

--- a/assets/scss/common/_global.scss
+++ b/assets/scss/common/_global.scss
@@ -356,6 +356,9 @@ body {
   .katex-html > .newline {
       margin-top: 1rem;
   }
+  .katex-html {
+    overflow: scroll hidden;
+  }
 }
 
 .card-bar {
